добавлен шаблон для работы драйвера с шелл

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ if(CONFIG_STRIM_METERS)
     zephyr_library()
 
     zephyr_library_sources_ifdef(CONFIG_STRIM_METERS src/meters.c)
-
+    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS_SHELL src/meters_shell.c)
 endif()
