--- a/sample/prj.conf
+++ b/sample/prj.conf
@@ -3,3 +3,7 @@ CONFIG_LOG=n
 CONFIG_SHELL=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_STRIM_METERS_SHELL=y
+
+CONFIG_FPU=y
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
