при вызове команды shell view используется api функция meters_get_all

--- a/sample/prj.conf
+++ b/sample/prj.conf
@@ -3,6 +3,7 @@ CONFIG_LOG=n
 CONFIG_SHELL=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_STRIM_METERS_SHELL=y
+CONFIG_STRIM_METERS_VALID_DATA_TIMEOUT=10000
 
 CONFIG_FPU=y
 CONFIG_NEWLIB_LIBC=y
