--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.20.0)
 
-set(ZEPHYR_EXTRA_MODULES "${CMAKE_SOURCE_DIR}/..")
+list(APPEND ZEPHYR_EXTRA_MODULES "${CMAKE_SOURCE_DIR}/../../Bus485" "${CMAKE_SOURCE_DIR}/..")
+#list(APPEND ZEPHYR_EXTRA_MODULES "${CMAKE_SOURCE_DIR}/..")
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(app)
 
