--- a/sample/prj.conf
+++ b/sample/prj.conf
@@ -4,6 +4,8 @@ CONFIG_SHELL=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_STRIM_METERS_SHELL=y
 CONFIG_STRIM_METERS_VALID_DATA_TIMEOUT=10000
+CONFIG_STRIM_BUS485=y
+CONFIG_STRIM_METERS_BUS485_ENABLE=y
 
 CONFIG_FPU=y
 CONFIG_NEWLIB_LIBC=y
