добавлен опрос spm90

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,7 @@ if(CONFIG_STRIM_METERS)
     zephyr_library()
 
     zephyr_library_sources_ifdef(CONFIG_STRIM_METERS src/meters.c)
+    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS_BUS485_ENABLE src/protocol_utils.c)
+    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS_BUS485_ENABLE src/meters_spm90.c)
     zephyr_library_sources_ifdef(CONFIG_STRIM_METERS_SHELL src/meters_shell.c)
 endif()
