использование встроенного функционала для рассчета crc

--- a/sample/prj.conf
+++ b/sample/prj.conf
@@ -2,6 +2,7 @@ CONFIG_STRIM_METERS=y
 CONFIG_LOG=n
 CONFIG_SHELL=y
 CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_CRC=y
 CONFIG_STRIM_METERS_SHELL=y
 CONFIG_STRIM_METERS_VALID_DATA_TIMEOUT=10000
 CONFIG_STRIM_BUS485=y
