--- a/sample/prj.conf
+++ b/sample/prj.conf
@@ -1,7 +1,7 @@
 CONFIG_STRIM_METERS=y
-CONFIG_LOG=n
+CONFIG_LOG=y
 CONFIG_SHELL=y
-CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_CRC=y
 CONFIG_STRIM_METERS_SHELL=y
 CONFIG_STRIM_METERS_VALID_DATA_TIMEOUT=10000
