Удаление ненужного символа '\r' для shell

--- a/sample/boards/semc_ecx.conf
+++ b/sample/boards/semc_ecx.conf
@@ -23,7 +23,7 @@ CONFIG_MAIN_STACK_SIZE=16384
 CONFIG_ISR_STACK_SIZE=16384
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=16384
 
-CONFIG_REBOOT=y
+CONFIG_REBOOT=n
 
 CONFIG_HEAP_MEM_POOL_SIZE=163840
 
@@ -35,6 +35,6 @@ CONFIG_SHELL_BACKEND_SERIAL_LOG_MESSAGE_QUEUE_SIZE=2048
 CONFIG_FPU=y
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
-CONFIG_POSIX_TIMERS=y
+CONFIG_POSIX_TIMERS=n
 
-CONFIG_BOOTCONFIG=n
+#CONFIG_BOOTCONFIG=n
