--- a/sample/boards/semc_ecx.conf
+++ b/sample/boards/semc_ecx.conf
@@ -15,7 +15,8 @@ CONFIG_SRAM_BASE_ADDRESS=0x80C00000
 CONFIG_XIP=y
 CONFIG_INIT_ARCH_HW_AT_BOOT=y
 CONFIG_NXP_IMX_RT_USER_MPU_REGIONS=y
-CONFIG_USERSPACE=n
+CONFIG_USERSPACE=y
+CONFIG_APPLICATION_DEFINED_SYSCALL=y
 CONFIG_STACK_CANARIES=n
 
 # побольше стека, так как форматирование файловой системы много памяти требует
@@ -36,5 +37,6 @@ CONFIG_FPU=y
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_POSIX_TIMERS=n
+
 
 #CONFIG_BOOTCONFIG=n
