Перевод Kconfig на METERS2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-if(CONFIG_STRIM_METERS)
+if(CONFIG_STRIM_METERS2)
     list(APPEND ZEPHYR_EXTRA_MODULES "${CMAKE_SOURCE_DIR}/../Bus485")
     
     zephyr_syscall_header(src/meters.h)
@@ -7,9 +7,9 @@ if(CONFIG_STRIM_METERS)
     zephyr_library()
 
     zephyr_library_sources(src/meters.c)
-    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS_BUS485_ENABLE src/meter485/meters_spm90.c)
-    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS_BUS485_ENABLE src/meter485/meters_ce318.c)
-    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS_BUS485_ENABLE src/meter485/meters_mercury234.c)
-    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS_BUS485_ENABLE src/meter485/meters_poll485.c)
-    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS_SHELL src/meters_shell.c)
+    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS2_BUS485_ENABLE src/meter485/meters_spm90.c)
+    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS2_BUS485_ENABLE src/meter485/meters_ce318.c)
+    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS2_BUS485_ENABLE src/meter485/meters_mercury234.c)
+    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS2_BUS485_ENABLE src/meter485/meters_poll485.c)
+    zephyr_library_sources_ifdef(CONFIG_STRIM_METERS2_SHELL src/meters_shell.c)
 endif()
