--- a/sample/prj.conf
+++ b/sample/prj.conf
@@ -1,12 +1,14 @@
-CONFIG_STRIM_METERS=y
 CONFIG_LOG=y
 CONFIG_SHELL=y
 CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_CRC=y
-CONFIG_STRIM_METERS_SHELL=y
-CONFIG_STRIM_METERS_VALID_DATA_TIMEOUT=10000
+
 CONFIG_STRIM_BUS485=y
-CONFIG_STRIM_METERS_BUS485_ENABLE=y
+
+CONFIG_STRIM_METERS2=y
+CONFIG_STRIM_METERS2_SHELL=y
+CONFIG_STRIM_METERS2_VALID_DATA_TIMEOUT=10000
+CONFIG_STRIM_METERS2_BUS485_ENABLE=y
 
 CONFIG_FPU=y
 CONFIG_NEWLIB_LIBC=y
